...
            android:id="@+id/progressbar"
            style="android:indeterminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/hello_user"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>
...
